Fixed the preview tooltip component not showing the correct position when used inside a scrollable container

--- a/app/MindWork AI Studio/wwwroot/app.css
+++ b/app/MindWork AI Studio/wwwroot/app.css
@@ -45,6 +45,10 @@
     height: 200%;
 }
 
+.mud-popover-open.InnerScrollingFix {
+    left: 0 !important;
+}
+
 :root {
     --confidence-color: #000000;
 }
